# public/swagger.json
@@ -3332,6 +3332,14 @@
 					},
 					{
 						"in": "query",
+						"name": "machineId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
 						"name": "timezone",
 						"required": true,
 						"schema": {
